--- a/Dockerfile_new
+++ b/Dockerfile_new
@@ -2,18 +2,21 @@
 
 FROM bitnami/minideb:bullseye
 
-RUN apt-get clean && apt-get update && apt-get install -y gnupg wget x11vnc dbus-x11 unzip xvfb fluxbox net-tools nano curl lxterminal firefox-esr python3 python3-pip thunar geany midori git python3-venv
+RUN apt-get clean && apt-get update && apt-get install -y sudo gnupg wget x11vnc dbus-x11 unzip xvfb fluxbox net-tools nano curl lxterminal firefox-esr python3 python3-pip thunar geany midori git python3-venv
 
 RUN apt-get autoclean && \
     apt-get autoremove && \
     rm -rf /var/lib/apt/lists/*
 
-RUN useradd user1
-RUN passwd user1
-RUN adduser user1  sudo
-RUN su - user1
-RUN mkhomedir_helper user1
-RUN chsh -s /bin/bash user1
+#RUN useradd user1
+#RUN passwd user1
+#RUN adduser user1  sudo
+#RUN su - user1
+#RUN mkhomedir_helper user1
+#RUN chsh -s /bin/bash user1
+
+RUN useradd -m user1 && echo "user1:user1" | chpasswd && adduser user1 sudo
+USER user1
 
 RUN mkdir -p ~/downloads
 RUN cd ~/downloads/
